# kblite

./: .gitignore  README.md  pyproject.toml
_scratch/: wikipedia.py
src/conceptnet_sqlite/: __init__.py  base.py  vocab.py
src/conceptnet_sqlite/conceptnet/: base.py  concept.py  csv.py
src/kblite/: __init__.py  analyze.py  base.py  bktree.py  config.py  core.py  flashtext.py  lexrank.py  loader.py  logging.py  models.py  triplet.py
src/kblite/conceptnet/: __init__.py  base.py
src/kblite/plugins/: __init__.py
src/kblite/plugins/conceptnet/: __init__.py  csv.py  loader.py
src/kblite/plugins/fasttext/: __init__.py  loader.py
src/kblite/plugins/numberbatch/: __init__.py  loader.py
src/kblite/ui/: __init__.py  app.py
test/: main.py
