[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kblite"
version = "0.0.1"
description = "A SQLite-based interface for Knowledge Bases"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [{ name = "Yasas Senarath" }]
keywords = ["sqlite", "knowledge-base", "conceptnet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sqlalchemy",
    "huggingface-hub",
    "tqdm",
    "datasets",
    "numpy",
    "torch",
    "nightjar",
    "plyvel-ci",
    "orjson",
    "wordfreq",
    "rdflib",
]

[project.urls]
Homepage = "https://github.com/ysenarath/kblite"
Repository = "https://github.com/ysenarath/kblite"
Dataset = "https://huggingface.co/datasets/ysenarath/conceptnet-sqlite"

[tool.hatch.build.targets.wheel]
packages = ["src/kblite"]
