[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kblite"
dynamic = ["version"]
description = "A SQLite-based interface for Knowledge Bases"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [{ name = "Yasas Senarath" }]
keywords = ["sqlite", "knowledge-base", "conceptnet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sqlalchemy",
    "huggingface-hub",
    "tqdm",
    "datasets",
    "numpy",
    "torch",
    "nightjar",
    "plyvel-ci",
    "orjson",
    "wordfreq",
    "rdflib",
    "polars",
]

[project.urls]
Homepage = "https://github.com/ysenarath/kblite"
Repository = "https://github.com/ysenarath/kblite"
Dataset = "https://huggingface.co/datasets/ysenarath/conceptnet-sqlite"


[tool.hatch.version]
path = "src/kblite/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kblite"]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and import sorting (`I`)
select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["kblite"]
